# jdaviz_profiler

./: .gitignore  .pre-commit-config.yaml  README.md  configs.yaml  create_new_usecase.py  generate_and_profile.py  generate_profiler_notebooks.py  jupyter_lab_helper.py  notebook_profiler.py  notebooks_generator.py  profiler.py  profiler_generator.py  pyproject.toml  tox.ini  utils.py
imviz_images/: params.json  params.yaml  template.ipynb
notebooks/: CST-121_demo2.ipynb  Intro-To-Aladin-Lite.ipynb  aladin-demo.ipynb  break_jdaviz_imvizonly.ipynb  imviz-profile.ipynb  imviz-profile_original.ipynb  imviz_rgb_carina.ipynb  profiler.ipynb
src/: executable_cell.py  generate_and_profile.py  generate_notebooks.py  jupyter_lab_helper.py  jupyterlab_helper.py  metrics.py  notebook_generator.py  performance_metrics.py  profile_notebook.py  profiler.py  utils.py  viz_element.py
usecases/: example_template.ipynb
usecases/performance_photometry/: params.json
