[project]
name = "jdaviz_profiler"
description = "Profile jdaviz Jupyter notebook"
urls = {Homepage = "https://github.com/bafio/jdaviz_profiler"}
authors = [
    {name = "Fabio Trabucchi", email = "fabio.trabucchi@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE", content-type = "text/plain"}
requires-python = ">=3.12"
dependencies = [
    "jdaviz",
    "pillow",
    "playwright",
    "requests",
    "nbformat",
    "PyYAML",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest"
]

[build-system]
requires = [
    "setuptools",
    "setuptools_scm"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}
